# news-service

./: .env  .gitignore  AGENTS.md  README.md  pyproject.toml
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/common/: EmptyState.tsx  ErrorState.tsx  Loading.tsx  Pagination.tsx
frontend/src/components/dashboard/: RecentNews.tsx  StatCard.tsx  StatusPieChart.tsx
frontend/src/hooks/: useFilters.ts  useNews.ts  useScheduler.ts  useStats.ts  useTechnicalAnalysis.ts
frontend/src/pages/: DashboardPage.tsx  FiltersPage.tsx  NewsDetailPage.tsx  NewsListPage.tsx  SettingsPage.tsx  TechnicalPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
news_service/: __init__.py  app.py  config.py  content_generator.py  database.py  image_downloader.py  main.py  models.py  news_fetcher.py  publisher.py  service.py
news_service/api/: __init__.py  deps.py  filters.py  news.py  pipeline.py  router.py  scheduler.py  settings.py  system.py  technical.py
news_service/filters/: __init__.py  base.py  keyword_filter.py
news_service/technical/: __init__.py  engine.py  market_data.py  models.py  symbol_ranker.py
news_service/technical/detectors/: __init__.py  base.py  consecutive_candle.py  indicator_signal.py  volume_spike.py
news_service/type_wrapper/: ccxt_wrapper.py
tests/: conftest.py  test_content_generator.py  test_database.py  test_filters.py  test_image_downloader.py  test_news_fetcher.py  test_publisher.py  test_symbol_ranker.py  test_technical_detectors.py  test_technical_engine.py
(+10 files in other folders)
