[project]
name = "news-service"
version = "0.1.0"
description = "News fetching, processing, and publishing service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.5.59",
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-dotenv>=0.9.9",
    "uvicorn[standard]>=0.49.0",
]

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["news_service/type_wrapper/*_wrapper.py"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
